--- a/bydemet/index.html
+++ b/bydemet/index.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     
+
+    <footer>
+        <section>
+            <h3>Kontakt</h3>
+            <p>Tlf.</p>
+            <p>Mail</p>
+        </section>
+
+        <section>
+            <div> <img src="images/" alt="Lokations symbol"></div>
+        </section>
+    </footer>
 </body>
 </html>
