--- a/bydemet/index.html
+++ b/bydemet/index.html
@@ -17,7 +17,12 @@
         </section>
 
         <section>
-            <div> <img src="images/" alt="Lokations symbol"></div>
+            <div> <img src="images/location.png" alt="Lokations symbol"></div>
+            <p>Søren Frichs Vej 51, 8230 Aabyhøj</p>
+        </section>
+
+        <section>
+            <div><img src="images/" alt=""></div>
         </section>
     </footer>
 </body>
