--- a/bydemet/index.html
+++ b/bydemet/index.html
@@ -22,7 +22,8 @@
         </section>
 
         <section>
-            <div><img src="images/" alt=""></div>
+            <div><img src="images/facebook" alt="Facebook icon"></div>
+            <div><img src="images/instagram" alt="Instagram icon"></div>
         </section>
     </footer>
 </body>
