--- a/bydemet/index.html
+++ b/bydemet/index.html
@@ -9,6 +9,53 @@
     <title>Document</title>
 </head>
 <body>
+
+    <main>
+        <section id="velkommen">
+            <div>
+                <img src="images/location.png" alt="">
+            </div>
+
+            <div> 
+                <h1> Velkommen til by Demet</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Recusandae, nobis temporibus accusantium repudiandae minima ad <br> dicta excepturi ipsum voluptates molestias itaque sed natus quasi <br> atque dolor vel repellendus quos est.</p>
+            </div>
+        </section>
+
+        <hr class="solid">
+
+        <div>
+            <h2>Det siger kunderne</h2>
+        </div>
+
+        <section id="meninger">
+        <div class="timeline">
+            <div class="container left">
+              <div class="content">
+                <img src="images/facebook.png" alt="">
+                <h2>Sara</h2>
+                <p>Lorem ipsum..</p>
+              </div>
+            </div>
+            <div class="container right">
+              <div class="content">
+                <img src="images/facebook.png" alt="">
+                <h2>Nellie</h2>
+                <p>Lorem ipsum..</p>
+              </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                  <img src="images/facebook.png" alt="">
+                  <h2>Sara</h2>
+                  <p>Lorem ipsum..</p>
+                </div>
+              </div>
+          </div>
+        </section>
+    
+
+    </main>
     
 
     <footer>
