--- a/bydemet/index.html
+++ b/bydemet/index.html
@@ -7,6 +7,7 @@
     <title>BY DEMET</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/00a8789f99.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
@@ -102,7 +103,20 @@
                     Søndag Lukket
                 </p>
             </div>
+        </section>
 
+        <hr class="solid">
+
+        <section>
+            <div id="follow1">
+                <h2>Følg os på instagram</h2>
+            </div>
+
+            <div id="follow2">
+                <img src="images/facebook.png" alt="">
+                <img src="images/facebook.png" alt="">
+                <img src="images/facebook.png" alt="">
+            </div>
         </section>
     
 
@@ -137,5 +151,6 @@
     </footer>
 
 <script src="script.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </body>
 </html>
