faq side med javascript

--- a/bydemet/faq.html
+++ b/bydemet/faq.html
@@ -42,61 +42,123 @@
             </div>
         </section>
 
-        <section class="QnA">
-            <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p id='svar1' class='Svar'>Her skal stå et svar</p>
-                <hr class="faq">
+        <section class="QnA-container">
+            <div class=>
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
             </div>
 
-            <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button2'></button>
-                <p id='svar2' class='Svar'>Her skal stå et svar</p>
-                <hr class="faq">
-            </div>
+            <hr class="faq-line">
 
             <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p class="Svar" id="svar3"></p>
-                <hr class="faq">
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
             </div>
 
-            <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p class="Svar" id="svar4"></p>
-                <hr class="faq">
-            </div>
+            <hr class="faq-line">
 
             <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p class="Svar" id="svar5"></p>
-                <hr class="faq">
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
             </div>
 
-            <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p class="Svar" id="svar6"></p>
-                <hr class="faq">
-            </div>
+            <hr class="faq-line">
 
             <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p class="Svar" id="svar7"></p>
-                <hr class="faq">
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
             </div>
 
+            <hr class="faq-line">
+
             <div>
-                <p>Her skal stå et spørgsmål?</p>
-                <button class="arrowbtn" type='button'></button>
-                <p class="Svar" id="svar8"></p>
-                <hr class="faq">
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
+            </div>
+
+            <hr class="faq-line">
+
+            <div>
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
+            </div>
+
+            <hr class="faq-line">
+
+            <div>
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
+            </div>
+
+            <hr class="faq-line">
+
+            <div>
+                <!-- faq spørgsmål -->
+                <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
+
+                <!-- faq svar -->
+                <div class="faq-svar">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                        necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                        aperiam.
+                        Perspiciatis, porro!</p>
+                </div>
             </div>
         </section>
     </main>
