--- a/bydemet/faq.html
+++ b/bydemet/faq.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>by-demet Permanent hårfjerning</title>
-
-    <meta name="description"
-        content="by Demet - Permanent hårfjerning. Vi tilbyder permanent hårfjerning med laser. Med stort fokus på kvalitet, grundighed og sikkerhed i behandlingen sikre vi dig et godt resultat hver gang.">
+    <title>BY DEMET Permanent hårfjerning</title>
+    <meta name="description" content="by Demet - Permanent hårfjerning. Vi tilbyder permanent hårfjerning med laser. Med stort fokus på kvalitet, grundighed og sikkerhed i behandlingen sikre vi dig et godt resultat hver gang.">
 
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://kit.fontawesome.com/00a8789f99.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
