--- a/bydemet/faq.html
+++ b/bydemet/faq.html
@@ -10,7 +10,9 @@
 
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/00a8789f99.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,17 +20,17 @@
         <nav>
 
             <div id="navigation">
-                <a href=""><img src="img/D.png" alt="logo" width="100px"></a> <img class="bydemet"
+                <a href="index.html"><img src="images/" alt="logo" width="100px"></a> <img class="bydemet"
                     src="img/bydemet copy.png" alt="">
 
 
                 <ul>
                     <li> <a href="behandlingen">BEHANDLINGER</a> </li>
-                    <li> <a href=""> PRISER</a> </li>
-                    <li> <a href=""> OM OS</a> </li>
-                    <li> <a href="">FAQ</a> </li>
+                    <li> <a href="priser.html"> PRISER</a> </li>
+                    <li> <a href="omos.html"> OM OS</a> </li>
+                    <li> <a href="faq.html">FAQ</a> </li>
 
-                    <li class="mellemrum"> <a href="">BOOK TID</a></li>
+                    <li class="mellemrum"> <a href="https://app3.geckobooking.dk/site/booking.php?1=1&PHPSESSID=3f25c816e60860b474993272d7750c2e&bId=7441&icCode=a05ea4f4be6dee3f58a9ea717a63bf9bb7441&dTpl=1">BOOK TID</a></li>
                 </ul>
 
             </div>
