--- a/bydemet/index.html
+++ b/bydemet/index.html
@@ -7,16 +7,10 @@
     <title>BY DEMET</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/00a8789f99.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
-    <script>
-        document.body.className = 'hidden';
-      </script>
-
     <nav>
         
         <div id="navigation">
@@ -34,6 +28,21 @@
 
          </div>
     </nav>
+
+
+<header id="headmob">  
+    <div>
+      <a href="index.html">
+        <img src="images/facebook.png" alt="">
+      </a>
+    </div>
+  
+    <div>
+      <a href="mobmenu.html">
+        <img src="images/burgermenuedt.png" alt="burgermenu">
+      </a>
+    </div>
+</header>
 
     <main>
         <section id="velkommen">
@@ -151,6 +160,5 @@
     </footer>
 
 <script src="script.js"></script>
-<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </body>
 </html>
