--- a/bydemet/faq.html
+++ b/bydemet/faq.html
@@ -45,7 +45,7 @@
         </section>
 
         <section class="QnA-container">
-            <div class=>
+            <div>
                 <!-- faq spørgsmål -->
                 <h3 class="faq-spm">Her skal stå et spørgsmål?</h3>
 
