--- a/bydemet/omos.html
+++ b/bydemet/omos.html
@@ -56,14 +56,14 @@
             </div>
 
             <div>
-                <img src="images/demet-placeholder.jpg" alt="demet-cetin" id="frame">
+                <img src="images/demet-placeholder.jpg" alt="demet-cetin" class="frame">
             </div>
         </section>
 
         <section class="omos-container">
 
             <div>
-                <img src="images/demet-placeholder.jpg" alt="demet-cetin" id="Ali">
+                <img src="images/demet-placeholder.jpg" alt="ali-tareen" id="Ali">
             </div>
             <div>
                 <h2>Ali Tareen</h2>
@@ -89,7 +89,7 @@
             </div>
 
             <div>
-                <img src="images/demet-placeholder.jpg" alt="demet-cetin" id="frame">
+                <img src="images/demet-placeholder.jpg" alt="josefine-thomsen" class="frame">
             </div>
         </section>
 
