--- a/bydemet/mobmenu.html
+++ b/bydemet/mobmenu.html
@@ -17,7 +17,7 @@
             <a href="priser.html">Priser</a>
             <a href="omos.html">Om os</a>
             <a href="FAQ.html">FAQ</a>
-            <a href="">Book tid</a> 
+            <a href="https://app3.geckobooking.dk/site/booking.php?1=1&PHPSESSID=ef6578fac0d54398f4293b80ed25b4ca&bId=7441&icCode=a05ea4f4be6dee3f58a9ea717a63bf9bb7441&dTpl=1">Book tid</a> 
         </div>
     </main>
 </body>
