--- a/bydemet/faq.html
+++ b/bydemet/faq.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="da">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BY DEMET Permanent hårfjerning</title>
-    <meta name="description" content="by Demet - Permanent hårfjerning. Vi tilbyder permanent hårfjerning med laser. Med stort fokus på kvalitet, grundighed og sikkerhed i behandlingen sikre vi dig et godt resultat hver gang.">
-
+    <title>BY DEMET</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/00a8789f99.js" crossorigin="anonymous"></script>
+    <script src="//code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 </head>
 
@@ -31,6 +29,22 @@
 
          </div>
     </nav>
+    <hr id="goldline">
+
+
+<header id="headmob">  
+    <div>
+      <a href="index.html">
+        <img src="images/facebook.png" alt="">
+      </a>
+    </div>
+  
+    <div>
+      <a href="mobmenu.html">
+        <img src="images/burgermenuedt.png" alt="burgermenu">
+      </a>
+    </div>
+</header>
 
         <header id="headmob">  
             <div>
@@ -201,7 +215,6 @@
         </section>
     </footer>
     <script src="script.js"></script>
-
 </body>
 
 </html>
