--- a/bydemet/priser.html
+++ b/bydemet/priser.html
@@ -29,6 +29,22 @@
 
          </div>
     </nav>
+    <hr id="goldline">
+
+
+<header id="headmob">  
+    <div>
+      <a href="index.html">
+        <img src="images/facebook.png" alt="">
+      </a>
+    </div>
+  
+    <div>
+      <a href="mobmenu.html">
+        <img src="images/burgermenuedt.png" alt="burgermenu">
+      </a>
+    </div>
+</header>
 
 
 <header id="headmob">  
