--- a/bydemet/mobmenu.html
+++ b/bydemet/mobmenu.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BY DEMET</title>
+    <meta name="description" content="Vi tilbyder permanent hårfjerning laserbehandling i høj kvalitet med det bedste udstyr
+    på markedet. Med en behandling hos os slipper du for røde knopper, indgroede hår
+    og smerter. Tiden og pengene du før brugte på konventionel barbering kan du nu
+    bruge på sjovere ting. Du går herfra hårfri og med styrket selvtillid.
+    
+    Hos By Dement lægger vi stor vægt på din sikkerhed og tryghed. Du bliver behandlet
+    i et trygt rum af certificerede behandlere. Vi er godkendt af styrelsen for patientsikkerhed
+    og vi har en hudlæge og en sygeplejerske tilknyttet klinikken.">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/00a8789f99.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
@@ -13,11 +21,17 @@
     <main>
         <div id="menumob">
             <a href="index.html">Forsiden</a>
+            <hr class="goldline2">
             <a href="behandlingen.html">Behandlingen</a>
+            <hr class="goldline2">
             <a href="priser.html">Priser</a>
+            <hr class="goldline2">
             <a href="omos.html">Om os</a>
+            <hr class="goldline2">
             <a href="FAQ.html">FAQ</a>
+            <hr class="goldline2">
             <a href="https://app3.geckobooking.dk/site/booking.php?1=1&PHPSESSID=ef6578fac0d54398f4293b80ed25b4ca&bId=7441&icCode=a05ea4f4be6dee3f58a9ea717a63bf9bb7441&dTpl=1">Book tid</a> 
+            <hr class="goldline2">
         </div>
     </main>
 </body>
